--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 			<version>${org.slf4j-version}</version>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.15</version>
@@ -81,7 +81,7 @@
 				</exclusion>
 			</exclusions>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency-->
 
 		<!-- @Inject -->
 		<dependency>
@@ -177,11 +177,11 @@
 			<version>1.0.0.GA</version>
 		</dependency>
 		
-		<dependency>
+		<!--dependency>
         	<groupId>commons-fileupload</groupId>
         	<artifactId>commons-fileupload</artifactId>
         	<version>1.3.1</version>
-		</dependency>
+		</dependency-->
 		
 		<dependency>
         	<groupId>org.springframework.boot</groupId>
@@ -194,7 +194,7 @@
 			<artifactId>jackson-core-asl</artifactId>
 			<version>1.9.13</version>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.13</version>
@@ -203,7 +203,7 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.8.0</version>
-		</dependency>
+		</dependency-->
 
 	</dependencies>
     <build>
